att-ui/src/main/resources/org/zlogic/att/ui/Style.css
@import url("/com/sun/javafx/scene/control/skin/caspian/caspian.bss");

/* See http://docs.oracle.com/javafx/2/api/javafx/scene/doc-files/cssref.html for reference */

/*
 * Active task label
 */
.active-task-label {
	-fx-font-style: italic;
	-fx-font-weight: bold;
}

/*
 * Emphasis label
 */
.emphasis-label {
	-fx-font-weight: bold;
}

/*
 * Exception explanation label
 */
.exception-explanation {
	-fx-font-weight: bold;
}

/*
 * Active task popup scene (borrowed from .titled-pane > *.content)
 */
.current-task-notification-root {
	-fx-background-color:
		-fx-box-border,
		linear-gradient(to bottom, derive(-fx-color,-02%), derive(-fx-color,65%) 12%, derive(-fx-color,23%) 88%, derive(-fx-color,50%) 99%, -fx-box-border);
    -fx-background-insets: 0, 0 1 1 1;
	-fx-border-width: 2;
	-fx-border-color: -fx-focus-color;
}

/*
 * Timing item
 */
.timing-segment {
	-fx-accent: palegreen;
	-fx-control-inner-background: palegreen;
}
/* Unfocused table */
.table-row-cell:filled:selected:focused .timing-segment, .table-row-cell:filled:selected .timing-segment {
	-fx-background-color: palegreen;
}
/* Focused table */
.table-view:focused .table-row-cell:filled:focused:selected .timing-segment {
	-fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-selection-bar;
	-fx-background-insets: 0, 1, 2;
}
.table-view:focused .table-row-cell:filled:selected .timing-segment {
	-fx-background-color: -fx-selection-bar;
}
/* Text selection color */
.timing-segment .table-cell .text-field  {
	-fx-accent: #0093ff;
}

/*
 * Dragged item
 */
.table-row-cell .drag-accept-task {
	-fx-accent: cornsilk;
	-fx-background: cornsilk;
	-fx-background-color: -fx-selection-bar;
}
/* Unfocused table */
.table-row-cell:filled:selected:focused .drag-accept-task, .table-row-cell:filled:selected .drag-accept-task {
	-fx-background-color: -fx-selection-bar;
}
/* Focused table */
.table-view:focused .table-row-cell:filled:focused:selected .drag-accept-task {
	-fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-selection-bar;
	-fx-background-insets: 0, 1, 2;
}
.table-view:focused .table-row-cell:filled:selected .drag-accept-task {
	-fx-background-color: -fx-selection-bar;
}

/*
 * Completed item
 */
.item-completed .text {
	-fx-strikethrough: true;
}

/*
 * Not completed item
 */
.item-not-completed .text {
	-fx-strikethrough: false;
}

/*
 * Time graph handle
 */
.timegraph-handle {
    -fx-accent: -fx-box-border;
	-fx-fill: -fx-accent;
}
.timegraph-handle.text {
    -fx-font-size: 8;
}
.timegraph-handle:hover {
	-fx-fill: derive(-fx-accent,50%);
}

/*
 * Time graph time segment
 */
.timegraph-segment {
    -fx-stroke: -fx-box-border;
    -fx-stroke-width: 1;
	-fx-fill:
		linear-gradient(to bottom, derive(-fx-color,-02%), derive(-fx-color,65%) 12%, derive(-fx-color,23%) 88%, derive(-fx-color,50%) 99%, -fx-box-border);
}

.timegraph-segment.selected-segment {
	-fx-color: -fx-focus-color;
}

.timegraph-segment.text{
    /*-fx-fill: white;*/
}

/*
 * Time graph tick
 */
.timegraph-tick{
	-fx-color: black;
	-fx-stroke: -fx-color;
    -fx-stroke-dash-array: 10 10;
    -fx-stroke-dash-offset: 10;
	-fx-text-fill: -fx-color;
	-fx-text-alignment: center;
}

